# cfd-mini-app

./: README.md  ubuntu-cpp.dockerfile
.github/workflows/: run-build.yml
ci/: build_cpp.sh  test_cpp.sh
cppfd/: CMakeLists.txt  allTests.cpp  boundary_conditions.cpp  boundary_conditions.h  boundaryconditions.cpp  boundaryconditions.h  cfd_config.h.in  mesh.cpp  mesh.h  mesh_chunk.cpp  mesh_chunk.h  meshchunk.cpp  parallel_mesh.cpp  parallel_mesh.h  parallel_test.cpp  solver.cpp  solver.h  test.cpp
cppfd-mpi/: CMakeLists.txt  boundaryconditions.h  mesh.cpp  mesh.h
plots/: plot-speedup.py  run.pl
python-cfd/: BoundaryConditions.py  CG.py  Laplacian_PPP.py  Mesh.py  Simulation.py  Solver.py
testing/: compareResults.py
